objects/Bank_total__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Benefits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Benefits</label>
        <referenceTo>Bank_Benefits__c</referenceTo>
        <relationshipLabel>Bank total</relationshipLabel>
        <relationshipName>Bank_total</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Dishonours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Dishonours</label>
        <referenceTo>Bank_Dishonours__c</referenceTo>
        <relationshipLabel>Bank total</relationshipLabel>
        <relationshipName>Bank_total</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Gambling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Gambling</label>
        <referenceTo>Bank_Gambling__c</referenceTo>
        <relationshipLabel>Bank total</relationshipLabel>
        <relationshipName>Bank_total</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Income__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Income</label>
        <referenceTo>Bank_Income__c</referenceTo>
        <relationshipLabel>Bank total</relationshipLabel>
        <relationshipName>Bank_total</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Other_Debit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Other Debit</label>
        <referenceTo>Bank_Other_Debits__c</referenceTo>
        <relationshipLabel>Bank total</relationshipLabel>
        <relationshipName>Bank_total</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Rent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Rent</label>
        <referenceTo>Bank_Rent__c</referenceTo>
        <relationshipLabel>Bank total</relationshipLabel>
        <relationshipName>Bank_total</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_loans__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank loans</label>
        <referenceTo>Bank_Loans__c</referenceTo>
        <relationshipLabel>Bank total</relationshipLabel>
        <relationshipName>Bank_total</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>monthAvg__c</fullName>
        <label>monthAvg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalValue__c</fullName>
        <label>totalValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionCount__c</fullName>
        <label>transactionCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank total</label>
    <nameField>
        <label>total Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank total</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>